--- a/Capstone_Project_W4_Part2.ipynb
+++ b/Capstone_Project_W4_Part2.ipynb
@@ -35,7 +35,8 @@
     "* Housing prices and demographic information from Madrid districts will be got from Madrid´s city council web page:\n",
     "\n",
     "https://www.madrid.es/portales/munimadrid/es/Inicio/El-Ayuntamiento/Estadistica/Areas-de-informacion-estadistica/Areas-de-informacion-estadistica/?vgnextfmt=default&vgnextoid=9023c9fa0b23a210VgnVCM2000000c205a0aRCRD&vgnextchannel=b65ef78526674210VgnVCM1000000b205a0aRCRD\n",
-    "\n"
+    "\n",
+    "* From the different excel files got from the city council the information needed from the districts will be grouped and filtered for later usage along with the geographical data and venues data in order to complete the business case analysis.\n"
    ]
   },
   {
